<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.winx64</groupId>
    <artifactId>smart-sign-editor-parent</artifactId>
    <version>2.7.0</version>
    <packaging>pom</packaging>

    <name>SmartSignEditor-Parent</name>
    <description>Parent module of the entire SmartSignEditor project</description>

    <modules>
        <module>version/Adapter</module>
        <module>version/1_8_R1</module>
        <module>version/1_8_R2</module>
        <module>version/1_8_R3</module>
        <module>version/1_9_R1</module>
        <module>version/1_9_R2</module>
        <module>version/1_10_R1</module>
        <module>version/1_11_R1</module>
        <module>version/1_12_R1</module>
        <module>version/1_13_R1</module>
        <module>version/1_13_R2</module>
        <module>version/1_14_R1</module>
        <module>version/1_15_R1</module>
        <module>version/1_16_R1</module>
        <module>core</module>
    </modules>

    <issueManagement>
        <url>https://github.com/WinX64/smart-sign-editor/issues</url>
        <system>GitHub</system>
    </issueManagement>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
